# PaiiD

./: .claudeignore  .coverage  .cursorignore  .cursorrules  .cursorrules-checks  .cursorrules-modsquad  .deployment-trigger  .editorconfig  .env.example  .eslintrc.json  .gitignore  .modsquad_env  .modsquad_startup.py  .prettierrc  .render-deploy-trigger  .secrets.baseline  AGENT_1A_INTEGRATION_FIXES.md  AGENT_1B_AI_ANALYTICS_FIXES.md  AGENT_1D_SUMMARY.md  AGENT_2.5A_SETTINGS_FIXES.md  AGENT_2B_COMPONENT_TYPES_GUIDE.md  AGENT_2C_API_TYPES_GUIDE.md  AGENT_3.5_CODEBASE_AUDIT_CLEANUP.md  AGENT_3.6_FRONTEND_MOCK_PURGE_REPORT.md  AGENT_3.7_MOCK_PURGE_COMPLETION.md  AGENT_3A_API_VALIDATION_REPORT.md  AGENT_4A_BLOCKER_FIXES.md  AGENT_4B_ENDPOINT_IMPLEMENTATION.md  AGENT_4C_API_DOCUMENTATION.md  AGENT_5A_GITHUB_ACTIONS.md  AGENT_5B_PRECOMMIT_HOOKS.md  AGENT_5C_STARTUP_VALIDATION.md  AGENT_6B_SECRETS_MANAGEMENT.md  AGENT_6C_SECURITY_AUDIT.md  AGENT_7A_TYPESCRIPT_FIXES.md  AGENT_7C_PRODUCTION_VALIDATION.md  AGENT_ASSIGNMENT_SCHEDULE.md  AGENT_PROTOCOL.md  AGENT_REALTIME_MONITOR.md  ALPHA_VICTORY_ROADMAP.md  (+542 more)
backend/: .bandit  .deployment-marker  .env.example  .gitignore  .pre-commit-config.yaml  =7.0.0  ACTIVEPOSITIONS_AI_ENDPOINT.md  AGENT_1C_TRADING_FIXES.md  AGENT_1D_FUNCTIONAL_FIXES.md  AGENT_6A_SECURITY_TESTS.md  AGENT_7B_DEPENDENCY_UPGRADE.md  BATCH_3A_UNIT_TESTS_REPORT.md  CACHING_STRATEGY.md  DATABASE_SETUP.md  Dockerfile  FORCE_REBUILD_TRADIER.txt  JWT_AUTH_FIX_COMPLETE.md  JWT_PRODUCTION_SETUP.md  MIGRATION_INDEXES.sql  Procfile  README_BACKEND.md  REDIS_SETUP.md  RENDER_ENV_TEMPLATE.txt  SENTRY_SETUP.md  SERVICE_USAGE_EXAMPLES.md  STREAMING_SETUP.md  TEST_BASELINE_MOD_SQUAD.md  TRADIER_STREAMING_TODO.md  VALIDATION_GUIDE.md  VERIFICATION_INSTRUCTIONS.md  WAVE4_SERVICE_EXTRACTION_COMPLETE.md  WAVE5_OPTIMIZATION_REPORT.md  __init__.py  get_tradier_account.py  install-hooks.sh  jwt-auth-fix-summary.md  linting-before.txt  (+24 more)
(+1232 files in other folders)
